--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,10 @@
 buildscript {
-    ext {
-        compose_version = '1.1.0-beta01'
-    }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    apply from: 'versions.gradle'
+}
 plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
+    id 'com.android.application' version "$gradle_plugin_version" apply false
+    id 'com.android.library' version "$gradle_plugin_version" apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
 }
 
 task clean(type: Delete) {
