--- a/versions.gradle
+++ b/versions.gradle
@@ -13,4 +13,7 @@ ext {
     junit_version = '4.13.2'
     core_ktx_version = '1.7.0'
     gradle_plugin_version = '7.2.1'
+    hilt_version = '2.42'
+    hilt_navigation_version = '1.0.0'
+    retrofit_version = '2.9.0'
 }
