--- a/versions.gradle
+++ b/versions.gradle
@@ -16,4 +16,5 @@ ext {
     hilt_version = '2.42'
     hilt_navigation_version = '1.0.0'
     retrofit_version = '2.9.0'
+    accompanist_version = '0.24.9-beta'
 }
