--- a/versions.gradle
+++ b/versions.gradle
@@ -17,4 +17,5 @@ ext {
     hilt_navigation_version = '1.0.0'
     retrofit_version = '2.9.0'
     accompanist_version = '0.24.9-beta'
+    coil_version = '2.1.0'
 }
