--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     /*Image*/
     implementation "io.coil-kt:coil-compose:$coil_version"
+    /*Rich text*/
+    implementation "com.halilibo.compose-richtext:richtext-commonmark:$rich_text_version"
 }
