--- a/versions.gradle
+++ b/versions.gradle
@@ -18,4 +18,5 @@ ext {
     retrofit_version = '2.9.0'
     accompanist_version = '0.24.9-beta'
     coil_version = '2.1.0'
+    rich_text_version = '0.11.0'
 }
