--- a/versions.gradle
+++ b/versions.gradle
@@ -11,6 +11,7 @@ ext {
     lifecycle_runtime_version = '2.4.1'
     activity_compose_version = '1.4.0'
     junit_version = '4.13.2'
+    mockk_version = '1.12.4'
     core_ktx_version = '1.7.0'
     gradle_plugin_version = '7.2.1'
     hilt_version = '2.42'
@@ -19,4 +20,5 @@ ext {
     accompanist_version = '0.24.9-beta'
     coil_version = '2.1.0'
     rich_text_version = '0.11.0'
+    coroutines_version = '1.6.2'
 }
